fixtures/valid/path-alias-public-import/src/consumer/public.ts
import { producerValue } from "@app/producer/public";

export const consumerValue = producerValue;
