fixtures/invalid/path-alias-private-import/src/consumer/public.ts
import { privateValue } from "@app/producer/private";

export const consumerValue = privateValue;
